--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ wgpu = { version = "*" }
 futures = "0.3"
 image = "0.25.4"
 bytemuck = { version = "1.16", features = [ "derive" ] }
-
+cgmath = "0.18"
